--- a/backend/negotiater.ipynb
+++ b/backend/negotiater.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -103,19 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant: \n",
-      "Assistant: snippet: CUPERTINO, CALIFORNIA Apple today introduced iPhone 16 Pro and iPhone 16 Pro Max, featuring Apple Intelligence, larger display sizes, new creative capabilities with innovative pro camera features, stunning graphics for immersive gaming, and more — all powered by the A18 Pro chip.With Apple Intelligence, powerful Apple-built generative models come to iPhone in the easy-to-use personal ..., title: Apple debuts iPhone 16 Pro and iPhone 16 Pro Max - Apple, link: https://www.apple.com/newsroom/2024/09/apple-debuts-iphone-16-pro-and-iphone-16-pro-max/, snippet: CUPERTINO, CALIFORNIA Apple today announced iPhone 16 and iPhone 16 Plus, built for Apple Intelligence, the easy-to-use personal intelligence system that understands personal context to deliver intelligence that is helpful and relevant while protecting user privacy.The iPhone 16 lineup also introduces Camera Control, which brings new ways to capture memories, and will help users quickly access ..., title: Apple introduces iPhone 16 and iPhone 16 Plus - Apple, link: https://www.apple.com/newsroom/2024/09/apple-introduces-iphone-16-and-iphone-16-plus/, snippet: The iPhone 16 lineup consists of four models: the iPhone 16, iPhone 16 Pro, iPhone 16 Plus, and iPhone 16 Pro Max.The iPhone 16 Pro and iPhone 16 Max grow up to 6.3 and 6.9 inches, while the iPhone 16 and iPhone 16 Plus have stayed at 6.1 and 6.7 inches, respectively. The Pro models have scored drastically thinner bezels. Apple has debuted a new button on all new iPhone 16 models., title: Apple iPhone 16 release date, price, and features - PhoneArena, link: https://www.phonearena.com/apple-iphone-16-release-date-price-features-news, snippet: The ‌iPhone 16 Pro‌ starts at $999 for 128GB and $1,199 for ‌‌iPhone 16 Pro‌‌ Max for 256GB. Here's a breakdown of Apple's prices, including UK equivalents. Here's a breakdown of Apple ..., title: How Much Does Each iPhone 16 Model Cost? - MacRumors, link: https://www.macrumors.com/2024/09/13/how-much-does-iphone-16-cost/\n",
-      "Assistant: The price of the iPhone 16 Pro starts at $999 for 128GB and $1,199 for the iPhone 16 Pro Max for 256GB.\n",
-      "Assistant: The decision is to use the tool: False\n",
-      "\n",
-      "\n",
-      "The decision is to search: False\n",
-      "The decision is to calculate: True\n",
-      "The decision is to lookup: False\n",
-      "The decision is to generate: False\n",
-      "\n",
-      "\n",
-      "The answer is 2\n",
+      "Assistant: I'll try to find some information about the price of iPhone 16 in India.\n",
       "Goodbye!\n"
      ]
     }
