--- a/backend/chatbot.ipynb
+++ b/backend/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7b571a538c20>"
+       "<langgraph.graph.state.StateGraph at 0x7022f6ba3020>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,6 +63,7 @@
     "\n",
     "\n",
     "def chatbot(state: State):\n",
+    "    print(\"------------Chatting-------------\")\n",
     "    return {\"messages\": [llm.invoke(state[\"messages\"])]}\n",
     "\n",
     "\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,15 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant: Hello Aravinthan, nice to meet you. Is there anything I can help you with or would you like to chat?\n",
-      "Assistant: I don't have any information about your name. Our conversation just started, and I don't have any prior knowledge about you. If you'd like to share your name, I'd be happy to chat with you.\n",
+      "------------Chatting-------------\n",
+      "Assistant: I'm not aware of the current price of the Nothing Phone 2A in India as my knowledge cutoff is December 2023. However, I can suggest some ways for you to find the current price:\n",
+      "\n",
+      "1. Check the official website of Nothing: You can visit the official website of Nothing to check the current price of the Nothing Phone 2A in India.\n",
+      "2. Online marketplaces: You can check online marketplaces like Flipkart, Amazon, or Reliance Digital to find the current price of the Nothing Phone 2A in India.\n",
+      "3. Retail stores: You can also visit retail stores like Croma or Vijay Sales to check the current price of the Nothing Phone 2A in India.\n",
+      "\n",
+      "As of my knowledge cutoff in December 2023, the price of the Nothing Phone 2A in India was around ₹49,999 for the base model. However, please note that prices may vary depending on the region, retailer, and availability.\n",
+      "\n",
+      "I recommend checking the current price from a reliable source to get the most up-to-date information.\n",
       "Goodbye!\n"
      ]
     }
