--- a/backend/negotiater.ipynb
+++ b/backend/negotiater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x73bdb85cacc0>"
+       "<langgraph.graph.state.StateGraph at 0x798daf110fe0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant: I'll try to find some information about the price of iPhone 16 in India.\n",
+      "Assistant: Hello. Is there something I can help you with or would you like to know more about LangChain or perhaps something else?\n",
+      "Assistant: \n",
+      "Assistant: snippet: The Nothing Phone (2a) will receive three Android OS upgrades and four security updates, which isn't quite as good as what Samsung or Google offer at a slightly higher price bracket, but it's ..., title: Nothing Phone (2a) Review: The New Budget Standard | WIRED, link: https://www.wired.com/review/nothing-phone-2a/, snippet: Phone (2a) Colour: Black. Nothing Phone (2a)Nothing Cable (c-c)Phone (2a) Screen Protector (pre-applied)SIM tray ejectorSafety information and warranty card. Purchase Phone (2a) and get a Perplexity Pro token for free from March 5-19. $349.00., title: Phone (2a) - Nothing US, link: https://us.nothing.tech/products/phone-2a, snippet: Nothing Phone 2a: Starting price: $349 / £319: Display size and resolution: 6.7-inch 1084 x 2412 AMOLED: Display brightness, refresh rate: 30-120Hz adaptive refresh rate: Processor:, title: Nothing Phone 2a Review: Pixel 7a and iPhone SE should be scared, link: https://www.tomsguide.com/phones/android-phones/nothing-phone-2a-review, snippet: Nothing unveiled the Phone 2a on March 5, 2024, and the phone is now available in most global markets where the brand has a presence. It costs £319 in the U.K. for the 8GB/128GB version, and the ..., title: Nothing Phone 2a review: Why would you buy anything else?, link: https://www.androidcentral.com/phones/nothing-phone-2a-review\n",
+      "Assistant: The price of the Nothing Phone 2A is $349.00.\n",
+      "Assistant: \n",
+      "Assistant: snippet: Find out the latest price, specs, and review of Nothing Phone 2a, a transparent smartphone with a unique glyph interface. Compare with other phones and see user ratings, videos, and stories., title: Nothing Phone 2a - Price in India, Full Specs (22nd October 2024 ..., link: https://www.91mobiles.com/nothing-phone-2a-price-in-india, snippet: Easy returns. 100% Authentic products. Buy Nothing Phone (2a) 5G online at best price with offers in India. Nothing Phone (2a) 5G (Black, 128 GB) features and specifications include 8 GB RAM, 128 GB ROM, 5000 mAh battery, 50 MP back camera and 32 MP front camera. Compare Phone (2a) 5G by price and performance to shop at Flipkart., title: Nothing Phone (2a) 5G (Blue, 128 GB) (8 GB RAM) - Flipkart, link: https://www.flipkart.com/nothing-phone-2a-5g-blue-128-gb/p/itm85c6bca5edadc?pid=MOBHY8KMDGZNWH4G&lid=LSTMOBHY8KMDGZNWH4GPMEHQG&fm=organic&ppt=None&ppn=None&ssid=8p94axkyxs0000001728219806229, snippet: Nothing Phone 2a best price is Rs. 21,844 as on 22nd October 2024. See full specifications, expert reviews, user ratings, and more. Compare Nothing Phone 2a prices before buying online., title: Nothing Phone 2a - Price in India, Specifications, Comparison (24th ..., link: https://www.gadgets360.com/nothing-phone-2a-price-in-india-124428, snippet: Nothing Phone 2a has been launched in India. The latest handset from the UK-based brand runs on MediaTek Dimensity 7200 Pro SoC and features an AMOLED display with 120Hz adaptive refresh rate. It flaunts dual 50-megapixel cameras at the rear and has an IP54-rated build. The Nothing Phone 2a brings the company's trademark Glyph Interface with a new trio of light configurations and functions., title: Nothing Phone 2a With MediaTek Dimensity 7200 Pro SoC, 5,000mAh Battery ..., link: https://www.gadgets360.com/mobiles/news/nothing-phone-2a-price-in-india-launch-specifications-features-sale-flipkart-5181081\n",
+      "Assistant: The price of the Nothing Phone 2A in India is around ₹21,844.\n",
       "Goodbye!\n"
      ]
     }
@@ -142,18 +148,11 @@
     "            stream_graph_updates(user_input)\n",
     "            break\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".BargainBot",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
